# cpp_project_builder

./: create_cpp_project  generate_cc_project
template/project/: CMakeLists.txt
template/project/document/: CMakeLists.txt
